# saldo-dalin-ws

./: .gitignore  Justfile  Makefile  README.md  pyproject.toml  ruff.toml  workspace.toml
.github/workflows/: coverage.yml
assets/testing/: dalin.lex  saldo.lex  saldo.txt
bases/sblex/cliapp/: __init__.py  core.py
bases/sblex/webapp/: __init__.py  main.py  responses.py  schemas.py  tasks.py
bases/sblex/webapp/api/: __init__.py
bases/sblex/webapp/api/saldo_ws/: __init__.py  deps.py  fullform_api.py  fullform_lex_api.py  lids.py  md1_api.py
bases/sblex/webapp/tests/: conftest.py  saldo_ws_e2e_test.py
components/sblex/fm/: __init__.py  morphology.py  semantics.py
components/sblex/lookup/: __init__.py  core.py
components/sblex/mem_semantic_repository/: __init__.py  core.py
components/sblex/predicates/: __init__.py  core.py
components/sblex/saldo_refs/: __init__.py  core.py
components/sblex/schemas/: __init__.py  core.py
components/sblex/semantic_repository/: __init__.py  core.py
components/sblex/socket_lookup/: __init__.py  core.py
components/sblex/socket_semantic_repository/: __init__.py  core.py
components/sblex/trie/: __init__.py  trie.py
dalin-ws/: compound.py  conplisit.py  fullform.py  fullform_lex.py  handler.py  lb.py  lemma.py  lexeme.py  md1.py  md1e.py  saldo_util.py  sblex.py  table.py  utf8.py
dalin-ws/mod_python/: __init__.py  apache.py
projects/saldo-dalin-ws/: pyproject.toml
saldo-ws/: compound.py  dist.py  fullform.py  fullform_lex.py  glsib.py  glsib_old.py  handler.py  lem.py  lemma.py  lexeme.py  lsib.py  md1.py  paradigms.py  paradigms_list.py  plist.py  pos.py  pos_list.py  saldo_util.py  sib.py  table.py  utf8.py  version.py
saldo-ws/mod_python/: __init__.py  apache.py  util.py
sblex/: __init__.py  predicates.py
sblex/application/queries/: __init__.py  lex_fullforms.py
sblex/application/services/: __init__.py  lookup.py
sblex/infrastructure/queries/: __init__.py  lookup_lex_fullforms.py
sblex/infrastructure/service/: socket_lookup.py
templates/: saldo_document.html  saldo_fullform.html  saldo_fullform.xml  saldo_fullform_lex.html  saldo_fullform_lex.xml  saldo_lid_saknas.html  saldo_mata_in_ordform.html
test/bases/sblex/cliapp/: test_core.py
test/bases/sblex/webapp/: test_core.py
test/components/sblex/fm/: test_core.py  test_morphology.py  test_morphology_from_file.py
test/components/sblex/lookup/: test_core.py
test/components/sblex/mem_semantic_repository/: test_core.py
test/components/sblex/predicates/: test_core.py
test/components/sblex/saldo_refs/: test_core.py
test/components/sblex/schemas/: test_core.py
test/components/sblex/semantic_repository/: test_core.py
test/components/sblex/socket_lookup/: test_core.py
test/components/sblex/socket_semantic_repository/: test_core.py
test/components/sblex/trie/: test_core.py
test/e2e/: conftest.py
test/e2e/webapp/: saldo_ws_e2e_test.py  saldo_ws_fullform_lex_api_test.py  saldo_ws_lid_api_test.py
webapp/: main.py  schemas.py
webapp/api/: __init__.py
webapp/api/saldo_ws/: __init__.py
webapp/schemas/: __init__.py  formats.py  lexeme.py
webapp/tests/: conftest.py  saldo_ws_e2e_test.py
