[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "httpx>=0.23.1",
    "asgi-lifespan>=2.0.0",
    "pytest-asyncio>=0.20.3",
]

[project]
name = "saldo-dalin-ws"
version = "0.0.1"
description = ""
authors = [
    {name = "Kristoffer Andersson", email = "kod.kristoff@gmail.com"},
]
dependencies = [
    "fastapi>=0.88.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
