

[tool.poetry]
name = "saldo-dalin-ws"
version = "0.0.1"
description = ""
authors = [
    "Kristoffer Andersson <kristoffer.andersson@gu.se>",
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/spraakbanken/saldo-dalin-ws"
packages = [
    {include = "sblex/webapp", from = "bases"},
    {include = "sblex/cliapp", from = "bases"},
    {include = "sblex/lookup", from = "components"},
    {include = "sblex/schemas", from = "components"},
    {include = "sblex/socket_lookup", from = "components"},
]


[tool.poetry.dependencies]
python = ">=3.10"
fastapi="^0.89.0"
pydantic = "^1.10.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
asgi-lifespan = "^2.0.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"

