

[tool.poetry]
name = "saldo-dalin-ws"
version = "0.0.1"
description = ""
authors = [
    "Kristoffer Andersson <kristoffer.andersson@gu.se>",
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/spraakbanken/saldo-dalin-ws"
packages = [
    {include = "sblex/webapp", from = "bases"},
    {include = "sblex/cliapp", from = "bases"},
    {include = "sblex/lookup", from = "components"},
    {include = "sblex/trie", from = "components"},
    {include = "sblex/fm", from = "components"},
    {include = "sblex/schemas", from = "components"},
    {include = "sblex/socket_lookup", from = "components"},
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi="^0.93.0"
pydantic = "^1.10.4"
orjson = "^3.8.7"
typer = "^0.7.0"
python-dotenv = "^1.0.0"
json_streams = "^0.12.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
asgi-lifespan = "^2.0.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"

[tool.poetry.scripts]
saldo-cli = "sblex.cliapp:app"

[tool.black]
target-version = ["py310"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = [
  "A",
#   "ANN",
  "B",
  "BLE",
  "C4",
  "C90",
#   "D",
  "E",
  "F",
  "FBT",
  "I",
  "RUF",
  "S",
  "YTT",
]

# Never enforce `E501` (line length violations).
# ignore = ["E501"]
ignore = ["ANN101", "ANN102","D203", "D213"]

line-length = 97

target-version = "py310"

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"tests/*" = ["D100","D101","D102","D103","D104","S101"]
# "__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.10"

